Update wpu community blog

--- a/app/writings/_mdx-content/wpu-community.mdx
+++ b/app/writings/_mdx-content/wpu-community.mdx
@@ -1,10 +1,15 @@
 ---
-thumbnail: "/writings/wpu-cover.png"
+thumbnail: "/writings/wpu-banner.png"
 title: "WPU Community"
+description: "an indonesian discord programming community with 50,000 members. don't forget the semicolon;"
 slug: "wpu-community"
-category: "Community"
+category: "#community | #chatting"
 date: "03-02-2025"
 ---
+
+<>
+  <p><img src="/writings/wpu-banner.png" alt="Alt text" className="w-full h-[200px] sm:h-[280px] object-cover border border-foreground"/></p>
+</>
 
 ## 🚀 Yuk Gabung di Komunitas Discord WPU
 
