Add shadcn ui article for writings page

--- a/app/writings/_mdx-content/wpu-community.mdx
+++ b/app/writings/_mdx-content/wpu-community.mdx
@@ -24,7 +24,7 @@ Halo, para coder ganteng dan cantik plus tech enthusiast! 👋 Kami super excite
 - 🎉 Event-event seru dan workshop eksklusif dengan hadiah yang bikin kamu lompat kegirangan
 - 😊 Ketemu admin-admin super ramah, asik, dan kadang-kadang agak absurd
 - ☕ Tempat nongkrong dan ngobrol santai
-- 🌟 Dapat mengirimkan Aplikasi atau Setup Desktop untuk di review dan di pamerkan oleh Lord Sandhika Galih melalui 
+- 🌟 Dapat mengirimkan Aplikasi atau Setup Desktop untuk di review dan di pamerkan oleh Lord Sandhika Galih melalui [Youtube/Playlist-Project-Kalian](https://www.youtube.com/playlist?list=PLFIM0718LjIWedIH884cQrsMKWWtB4wFL)
 
 Jangan sampai ketinggalan kereta keseruan ini! Yuk gabung sekarang dan mulai perjalanan coding-mu bareng kita. Siapa tahu kamu bakal jadi developer legend berikutnya! 🌟
 
@@ -49,13 +49,17 @@ Baru pertama kali denger Discord? Tenang aja, nggak serumit ngebenerin bug kok! 
 - Jangan sungkan buat nanya kalau ada yang bikin kepala pusing tujuh keliling (di sini kita belajar bareng)
 - Hormati sesama member dan admin (ingat, kita semua di sini keluarga coder)
 
-🎉 **Link Discord WPU :** [discord.gg/wpu](https://discord.gg/wpu/)
+🎗️ **Link Discord WPU :** [discord.gg/wpu](https://discord.gg/wpu)
 
-🌐 **Link Website Landing Page WPU** : [wpu.pow.kim](https://wpu.pow.kim/)
+🌐 **Link Website Landing Page WPU** : [wpu.pow.kim](https://wpu.pow.kim)
 
 💻 **Link Bellshade WPU** : [github/bellshade](https://github.com/bellshade)
 
-📸 **Link Instagram WPU Community** : [instagram/wpu.community](https://www.instagram.com/wpu.community/)
+📸 **Link Instagram WPU Community** : [instagram/wpu.community](https://www.instagram.com/wpu.community)
+
+📸 **Link Instagram Pa Dhika** : [instagram/sandhikagalih](https://www.instagram.com/sandhikagalih)
+
+🎥 **Link Youtube WPU** : [youtube/@sandhikagalihWPU](https://www.youtube.com/@sandhikagalihWPU)
 
 📖 **Link WPU Course** : [wpucourse.id](https://wpucourse.id)
 
@@ -70,5 +74,6 @@ Kami tunggu kehadiranmu di sana! Siapkan semangat belajar, kopi, dan cemilan fav
 <>
   <p><img src="/writings/wpuanimestyle.png" alt="Alt text" className="w-80 h-auto"/></p>
 </>
-
-Art source : Edqe14/Yuka
+<>
+  <p className="text-xs">source: Edqe14/Yuka</p>
+</>
