--- a/app/writings/_mdx-content/wpu-community.mdx
+++ b/app/writings/_mdx-content/wpu-community.mdx
@@ -1,5 +1,5 @@
 ---
-thumbnail: "/writings/wpu-banner.png"
+thumbnail: "/writings/wpu-banner.webp"
 title: "WPU Community"
 description: "an indonesian discord programming community with 50,000 members. don't forget the semicolon;"
 slug: "wpu-community"
