Update navbar button menu on mobile

--- a/app/writings/_mdx-content/wpu-community.mdx
+++ b/app/writings/_mdx-content/wpu-community.mdx
@@ -8,7 +8,7 @@ date: "2025-02-03"
 ---
 
 <>
-  <p><img src="/writings/wpu-banner.png" alt="Alt text" className="w-full h-[200px] sm:h-[280px] object-cover border border-foreground"/></p>
+  <p><img src="/writings/wpu-banner.webp" alt="Alt text" className="w-full h-[200px] sm:h-[280px] object-cover border border-foreground"/></p>
 </>
 
 ## 🚀 Yuk Gabung di Komunitas Discord WPU
