Create tags feature on the writings page

--- a/app/writings/_mdx-content/shadcn-ui.mdx
+++ b/app/writings/_mdx-content/shadcn-ui.mdx
@@ -3,7 +3,13 @@ thumbnail: "/writings/wpu-banner.png"
 title: "shadcn/ui"
 description: "accessible and customizable components that you can copy and paste into your apps. free. open source."
 slug: "shadcn-ui"
-category: "#frontend | #ui_components"
+tags:
+  - Typescript
+  - Tailwind CSS
+  - Radix UI
+category: 
+  - "#frontend"
+  - "#ui_components"
 date: "2025-07-20"
 ---
 
@@ -15,7 +21,7 @@ Many of you are probably using **Tailwind CSS** to style your websites. This tim
 
 The library supports popular frameworks such as **Next.js, Astro.js, Tanstack Start, and Laravel**, and is designed to be lightweight and modular — perfect for both small and large projects.
 
----
+<DotDivider />
 
 ### 🚀 Why Use Shadcn UI?
 
@@ -40,7 +46,7 @@ The library supports popular frameworks such as **Next.js, Astro.js, Tanstack St
 - **v0 dev (AI Chatbot)**  
   An AI-powered chatbot designed to help developers quickly build UI components. For example, if you need a `Button` component for your project, just ask **v0 dev**, and it will return a fully styled and Tailwind-powered button. These components are generated based on predefined Shadcn patterns, ensuring consistency across your design system.
 
----
+<DotDivider />
 
 ### ✅ Conclusion
 
