--- a/app/writings/_mdx-content/wpu-community.mdx
+++ b/app/writings/_mdx-content/wpu-community.mdx
@@ -3,7 +3,14 @@ thumbnail: "/writings/wpu-banner.webp"
 title: "WPU Community"
 description: "an indonesian discord programming community with 50,000 members. don't forget the semicolon;"
 slug: "wpu-community"
-category: "#community | #chatting"
+tags:
+  - Youtube
+  - Discord
+  - Instagram
+  - Programming Tutorial
+category: 
+  - "#community"
+  - "#chatting"
 date: "2025-02-03"
 ---
 
@@ -31,7 +38,7 @@ Jangan sampai ketinggalan kereta keseruan ini! Yuk gabung sekarang dan mulai per
 > **Jangan Lupa Titik Koma;** Karena titik koma yang tertinggal bisa bikin kode kamu jadi drama 😆
 > 
 
-<br/>
+<DotDivider/>
 
 ## 🔰 Panduan Gabung untuk Kamu yang Baru Kenal Discord
 
@@ -66,8 +73,6 @@ Baru pertama kali denger Discord? Tenang aja, nggak serumit ngebenerin bug kok! 
 Yuk gabung dan jadi bagian dari komunitas developer WPU! Siapa tahu bisa ketemu partner ngoding atau teman sejiwa di sini 😉
 
 Kami tunggu kehadiranmu di sana! Siapkan semangat belajar, kopi, dan cemilan favoritmu. Ayo bikin karya keren bareng-bareng. Kalau kamu punya ide liar atau project unik yang pengen dibahas, jangan ragu buat share. Sampai ketemu di server, dan semoga bug menjauh dari kodinganmu! 🔥
-
-<div className="bg-suram py-[2px] w-full my-12"/>
 
 ## 💎 Tambahan
 
