Update add new font, opengraph image and metadata in each writings slug page

--- a/app/writings/_mdx-content/shadcn-ui.mdx
+++ b/app/writings/_mdx-content/shadcn-ui.mdx
@@ -13,6 +13,10 @@ category:
 date: "2025-07-20"
 ---
 
+
+<Image src="/writings/shadcn-banner.png"  layout="responsive" width={900} height={300} alt="Alt text"/>
+
+
 ## 👋 Hello Tech Enthusiasts!
 
 Many of you are probably using **Tailwind CSS** to style your websites. This time, let’s dive deep into a trending UI component library — **Shadcn UI**. Let’s break it down together!
