--- a/app/writings/_mdx-content/wpu-community.mdx
+++ b/app/writings/_mdx-content/wpu-community.mdx
@@ -14,9 +14,7 @@ category:
 date: "2025-02-03"
 ---
 
-<>
-  <p><img src="/writings/wpu-banner.webp" alt="Alt text" className="w-full h-[200px] sm:h-[280px] object-cover border border-foreground"/></p>
-</>
+<Image src="/writings/wpu-banner.png" alt="Alt text" layout="responsive" width={900} height={300} className="border border-zeta"/>
 
 ## 🚀 Yuk Gabung di Komunitas Discord WPU
 
