Fix image metadata in each writins slug page

--- a/app/writings/_mdx-content/shadcn-ui.mdx
+++ b/app/writings/_mdx-content/shadcn-ui.mdx
@@ -1,5 +1,5 @@
 ---
-thumbnail: "/writings/wpu-banner.png"
+thumbnail: "/writings/shadcn-banner.png"
 title: "shadcn/ui"
 description: "accessible and customizable components that you can copy and paste into your apps. free. open source."
 slug: "shadcn-ui"
@@ -13,8 +13,9 @@ category:
 date: "2025-07-20"
 ---
 
-
-<Image src="/writings/shadcn-banner.png"  layout="responsive" width={900} height={300} alt="Alt text"/>
+<>
+  <p><img src="/writings/shadcn-banner.png" alt="shadcn banner image" className="w-full h-auto max-w-[900px] bg-cover" /></p>
+</>
 
 
 ## 👋 Hello Tech Enthusiasts!
