--- a/app/writings/_mdx-content/wpu-community.mdx
+++ b/app/writings/_mdx-content/wpu-community.mdx
@@ -14,7 +14,9 @@ category:
 date: "2025-02-03"
 ---
 
-<Image src="/writings/wpu-banner.png" alt="Alt text" layout="responsive" width={900} height={300} className="border border-zeta"/>
+<>
+  <p><img src="/writings/wpu-banner.webp" alt="WPU banner image" className="w-full h-auto max-w-[900px] bg-cover border border-zeta" /></p>
+</>
 
 ## 🚀 Yuk Gabung di Komunitas Discord WPU
 
